Add treebuilder